[gd_scene load_steps=11 format=3 uid="uid://t5n4swte65e7"]

[ext_resource type="Script" path="res://FullGame/Civilization.gd" id="1_2jp8o"]
[ext_resource type="PackedScene" uid="uid://ccwobfq8m53gq" path="res://MapGame/mapa.tscn" id="3_0o4qs"]
[ext_resource type="PackedScene" uid="uid://bnhfrimi4x8vb" path="res://Castle/Castle.tscn" id="4_2sghg"]
[ext_resource type="PackedScene" uid="uid://bayv8ioqsnh2e" path="res://camera_2d.tscn" id="4_pjtdy"]
[ext_resource type="PackedScene" uid="uid://e1gy3y60b3pm" path="res://army/Knight.tscn" id="6_5rdu6"]
[ext_resource type="Script" path="res://FullGame/PathScript.gd" id="6_lh4wr"]
[ext_resource type="Texture2D" uid="uid://cnnjjcmjiprst" path="res://bread.png" id="6_qii4f"]
[ext_resource type="Texture2D" uid="uid://df6pnfsqcsxl3" path="res://coin.png" id="7_yvqaf"]
[ext_resource type="Script" path="res://Player/PlayerVariables.gd" id="8_htjaf"]
[ext_resource type="Texture2D" uid="uid://cmqawf6evsdgl" path="res://menu/flags/ag.png" id="8_phbxp"]

[node name="Civilization" type="Node2D"]
script = ExtResource("1_2jp8o")

[node name="TileMap" parent="." instance=ExtResource("3_0o4qs")]
layer_1/tile_data = PackedInt32Array(-131073, 131074, 1, -196612, 131074, 1, -5, 131074, 1, 65537, 2, 1, -65536, 2, 2, -131070, 2, 1, 131071, 2, 2, 0, 196610, 1, 1, 2, 2, -65534, 2, 2, -65535, 2, 2, 2, 2, 2, 3, 2, 2, -65533, 2, 2, -131069, 2, 2, 262142, 65538, 1, 196610, 65538, 1, 131075, 65538, 1, 196612, 65538, 1, 196613, 65538, 1)
layer_2/tile_data = PackedInt32Array(262140, 65538, 2, 131068, 65538, 2, 131066, 65538, 2, 262138, 65538, 2, 131064, 131074, 2, 262136, 131074, 2)

[node name="Knight2" parent="." instance=ExtResource("6_5rdu6")]
modulate = Color(0.92549, 0.4, 0, 1)
position = Vector2(-96, -96)

[node name="Knight3" parent="." instance=ExtResource("6_5rdu6")]
modulate = Color(1, 0.0784314, 0.705882, 1)
position = Vector2(-224, 32)

[node name="Camera2D" parent="." instance=ExtResource("4_pjtdy")]
anchor_mode = 1

[node name="CastleArea" parent="." instance=ExtResource("4_2sghg")]
position = Vector2(96, 96)

[node name="Console" type="CanvasLayer" parent="."]

[node name="UI" type="PanelContainer" parent="Console"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -439.0
offset_bottom = 218.0
grow_horizontal = 0
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="Console/UI"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Console/UI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Console/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.53
theme_override_constants/separation = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="Console/UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Console/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("6_qii4f")
expand_mode = 2

[node name="food" type="Label" parent="Console/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Food:"

[node name="foodValue" type="Label" parent="Console/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="Console/UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Console/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_yvqaf")
expand_mode = 2

[node name="gold" type="Label" parent="Console/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Gold:"

[node name="goldValue" type="Label" parent="Console/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="Console/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Console/UI/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 28
text = "Player"

[node name="TextureRect" type="TextureRect" parent="Console/UI/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("8_phbxp")

[node name="Day" type="Label" parent="Console/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Dzie≈Ñ: 1
"

[node name="New turn" type="Button" parent="Console/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Nowa tura"

[node name="New turn" type="Button" parent="Console"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -304.0
offset_top = 232.0
offset_right = -137.0
offset_bottom = 289.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "Nowa tura"

[node name="Label" type="Label" parent="Console/New turn"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 37.0
offset_top = 22.0
offset_right = 83.0
offset_bottom = 48.0
grow_horizontal = 0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="foodLabel" type="Label" parent="Console"]
visible = false
offset_left = 1417.0
offset_right = 1563.0
offset_bottom = 26.0
grow_horizontal = 0
text = "Food:
"

[node name="food" type="Label" parent="Console"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_right = -100.0
offset_bottom = 23.0
grow_horizontal = 0
text = "0
"

[node name="goldLabel" type="Label" parent="Console"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -183.0
offset_top = 26.0
offset_right = -142.0
offset_bottom = 52.0
grow_horizontal = 0
text = "Gold:"

[node name="gold" type="Label" parent="Console"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 26.0
offset_right = -100.0
offset_bottom = 52.0
grow_horizontal = 0
text = "0"

[node name="PlayerName" type="Label" parent="Console"]
visible = false
offset_left = 1417.0
offset_top = 92.0
offset_right = 1457.0
offset_bottom = 115.0

[node name="Path" type="Node2D" parent="."]
script = ExtResource("6_lh4wr")
metadata/player = NodePath("")

[node name="PlayerVariables" type="Node2D" parent="."]
script = ExtResource("8_htjaf")

[connection signal="CreateCastle" from="Knight2" to="." method="_on_knight_create_castle"]
[connection signal="CreateFarm" from="Knight2" to="." method="_on_knight_2_create_farm"]
[connection signal="DeleteLine" from="Knight2" to="Path" method="_on_knight_delete_line"]
[connection signal="GetLocalTileMap" from="Knight2" to="TileMap" method="_on_knight_get_local_tile_map"]
[connection signal="SelectNodeToCreatePath" from="Knight2" to="." method="_on_knight_select_node_to_create_path"]
[connection signal="area_entered" from="Knight2" to="Knight2" method="_on_area_entered"]
[connection signal="CreateCastle" from="Knight3" to="." method="_on_knight_create_castle"]
[connection signal="CreateFarm" from="Knight3" to="." method="_on_knight_2_create_farm"]
[connection signal="DeleteLine" from="Knight3" to="Path" method="_on_knight_delete_line"]
[connection signal="GetLocalTileMap" from="Knight3" to="TileMap" method="_on_knight_get_local_tile_map"]
[connection signal="SelectNodeToCreatePath" from="Knight3" to="." method="_on_knight_select_node_to_create_path"]
[connection signal="area_entered" from="Knight3" to="Knight3" method="_on_area_entered"]
[connection signal="pressed" from="Console/UI/MarginContainer/VBoxContainer/New turn" to="." method="_RefreshVariableOnTurn"]
[connection signal="pressed" from="Console/New turn" to="." method="_RefreshVariableOnTurn"]
